# korean-utils

./: README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
python/: README.md  test.ipynb
src/: characters.test.ts  characters.ts  misc.ts  romanization.test.ts  romanization.ts
