[tool.poetry]
name = "korean-utils"
version = "0.1.0"
description = ""
authors = ["Hiroshi Ogawa <hi.ogawa.zz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.5.0"
ipykernel = "^6.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
